[package]
name = "Ingram-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
config = "0.15.4"
env_logger = "0.11.6"
html = "0.6.3"
log = "0.4.22"
md-5 = "0.10.6"
ping = "0.5.2"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.43.0", features = ["full"] }
