[package]
name = "ingram-rs"
version = "0.1.0"
edition = "2021"
authors = ["Seaung"]
description = "A webcam vulnerability scanning framework written in Rust"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json", "cookies"] }
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
scraper = "0.19"
regex = "1.10"
ipnetwork = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = "0.4"
crossbeam = "0.8"
anyhow = "1.0"
thiserror = "1.0"
md5 = "0.7"
indicatif = "0.17"
colored = "2.1"
ua_generator = "0.3"
